--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="google-site-verification" content="t72EVXwwxjrPpVZ700uRf7N0htcgxNkFaGvk5EvDWsI" />
+
     <title>Dra. Angelita Lourenço | Advocacia Criminal no RJ</title>
     <meta name="description" content="Advocacia Criminal especializada em Defesa Criminal, Flagrantes, Audiência de Custódia e Tribunal do Júri no Rio de Janeiro." />
     <meta name="keywords" content="advogada criminal, defesa penal, advogado flagrante RJ, execução penal, custódia, júri, advocacia Duque de Caxias, Angelita Lourenço" />
