--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="Exg0RJ4OpnoJCEcNFHp3JkLW_CjDJCyqK7X1aTEMCus" />
 
+    <!-- URL canônica para SEO -->
+    <link rel="canonical" href="https://angelitalourenco.netlify.app/" />
+
     <title>Dra. Angelita Lourenço | Advocacia Criminal no RJ</title>
     <meta name="description" content="Advocacia Criminal especializada em Defesa Criminal, Flagrantes, Audiência de Custódia e Tribunal do Júri no Rio de Janeiro." />
     <meta name="keywords" content="advogada criminal, defesa penal, advogado flagrante RJ, execução penal, custódia, júri, advocacia Duque de Caxias, Angelita Lourenço" />
